--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Tic Tac Toe</title>
 </head>
 <body>
     <div class="game">
-        <div>X O</div>
-        <div id="item1" class="square"></div>
-        <div id="item2" class="square"></div>
-        <div id="item3" class="square"></div>
-        <div id="item4" class="square"></div>
-        <div id="item5" class="square"></div>
-        <div id="item6" class="square"></div>
-        <div id="item7" class="square"></div>
-        <div id="item8" class="square"></div>
-        <div id="item9" class="square"></div>  
+        <div class="title"><span>XO</span> game</div>
+        <div id="item1" class="square" onclick="game(this.id)"></div>
+        <div id="item2" class="square" onclick="game(this.id)"></div>
+        <div id="item3" class="square" onclick="game(this.id)"></div>
+        <div id="item4" class="square" onclick="game(this.id)"></div>
+        <div id="item5" class="square" onclick="game(this.id)"></div>
+        <div id="item6" class="square" onclick="game(this.id)"></div>
+        <div id="item7" class="square" onclick="game(this.id)"></div>
+        <div id="item8" class="square" onclick="game(this.id)"></div>
+        <div id="item9" class="square" onclick="game(this.id)"></div>    
     </div>
+    <script src="logic.js"></script>
 </body>
 </html>
